# diane

./: .gitignore  CHANGELOG.md  CLI_REFACTOR.md  FEATURES.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  SEAMLESS.md  SHORTCUTS.md  SYNC.md  pyproject.toml
diane/: __init__.py  audio.py  cli.py  config.py  encryption.py  export.py  record.py  stats.py  storage.py  sync.py  tui.py
scripts/: README.md  clipboard-monitor.py  diane-daemon.py  enable-auto-sync.sh  install.sh  quick-capture.sh
scripts/completions/: diane.bash-completion  diane.fish-completion  diane.zsh-completion
scripts/editors/: diane-vscode.js  diane.vim
scripts/launchd/: com.diane.sync.plist
scripts/systemd/: diane-sync.service
tests/: __init__.py  test_record.py
